--- a/src/components/Perfil/style.css
+++ b/src/components/Perfil/style.css
@@ -14,7 +14,7 @@
 }
 
 /* Imagem de Perfil */
-.perfil-container img {
+.img {
   width: 220px;
   height: 220px;
   border-radius: 100%;
@@ -30,13 +30,13 @@
 }
 
 /* Nome */
-.perfil-container h2 {
+.name {
   color: var(--primary-blue);
   font-size: 1.25rem;
 }
 
 /* Descrição */
-.perfil-container p {
+.desc {
   font-size: 1rem;
   font-weight: 300;
 }
@@ -46,6 +46,7 @@
   margin: 0 auto;
   color: var(--error);
   text-align: center;
+  font-weight: 400;
 
   font-size: 1.25rem;
 }
