--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -16,3 +16,9 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
+@media screen and (max-width: 520px) {
+  .card {
+    height: min-content;
+  }
+}
