--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -9,3 +9,9 @@
   font-size: 3.75rem;
   color: var(--white);
 }
+
+@media screen and (max-width: 520px) {
+  .logo-container {
+    flex-direction: column;
+  }
+}
