--- a/src/components/Perfil/style.css
+++ b/src/components/Perfil/style.css
@@ -50,3 +50,21 @@
 
   font-size: 1.25rem;
 }
+
+@media screen and (max-width: 1100px) {
+  .perfil-container {
+    width: 500px;
+  }
+  
+  .img {
+    width: 160px;
+    height: 160px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .perfil-container {
+    flex-direction: column;
+    width: min-content;
+  }
+}
